<resources>
    <string name="app_name">ProgKino</string>
    <string name="app_in_name">Proga Kino</string>
    <string name="app_in_name2">For your favorite club</string>
    <string name="app_text_bottom">Welcome in application !</string>
    <string name="btnSignIn">Войти</string>
    <string name="btnRegister">Зарегистрироваться</string>
    <string name="text_bottom">g</string>
    <string name="kinologo">kinologo</string>
    <string name="contacts">Контакты</string>
    <string name="tren">Тренировки</string>
    <string name="main_scen">Главная</string>
    <string name="info_teor">Теория</string>
    <string name="lists_users">Users</string>
    <string name="_user">События</string>
    <string name="main_scen_1">KINO</string>
    <string name="main_scen_2">App</string>
    <string name="categoryRecycler">App</string>
    <string name="eventumData">Дата</string>
    <string name="eventumType">Тип</string>
    <string name="event">Мероприятие</string>
    <string name="btn_add_event">Поставить лайк</string>
    <string name="btn_add_event2">Поставить лайк2</string>
    <string name="eventumDescription">Описание мероприятия</string>
    <string name="test_text_mnogo">Тект \л ы ва  ыло ылво а</string>
    <string name="opis1">Мобильное приложение для клуба КИНО </string>
    <string name="opis2">Контакты для связи:</string>
    <string name="opis2_2">Почта: pshp05@yandex.com \n Vk: https://vk.com/id499746732</string>
    <string name="opis3">Оставить отзыв можно здесь:</string>
    <string name="opis_btn">Напишите нам</string>
    <string name="tren1">Командные тренировки</string>
    <string name="tren2">Индивидуальные тренировки</string>
    <string name="tren11">Что? Где? Когда?</string>
    <string name="tren12">Своя игра</string>
    <string name="tren21">География</string>
    <string name="tren22">Искусство</string>
    <string name="tren23">Праздники</string>
    <string name="in_user">Режим пользователя</string>
    <string name="in_admin">Режим администратора</string>
    <string name="tren24">Сказки</string>
    <string name="tren25">Достопримечательности</string>
    <string name="tren26">Регионы России</string>
    <string name="tren27">Мифология</string>
    <string name="tutorial1">Списки с теорией:</string>
    <string name="question">Вопрос</string>
    <string name="answer">Ответ</string>
    <string name="answer_user">Сообщения пользователей</string>
    <string name="comment">Комментарий</string>
    <string name="ist">Источники</string>
    <string name="otzv">Сообщения</string>
    <string name="author">Автор</string>
    <string name="quit">Завершить</string>
    <string name="next_question">Следующий вопрос</string>
    <string name="answer_ok">Отправить ответ</string>
    <string name="tema">Тема</string>
    <string name="qweqwe">Назовите столицу следующей страны:</string>
    <string name="qweqwe3">Последние тренировки игроков</string>
    <string name="ochki">Твои очки</string>
    <string name="nominal">Номинал</string>
    <string name="chat">Чат</string>
    <string name="btnChatSend">Отправить</string>
    <string name="geo_teor">Теория по географии</string>
    <string name="add_eventum">Добавить/отредактировать/удалить \n событие</string>
    <string name="title_eventum">Название</string>
    <string name="data_eventum">Дата</string>
    <string name="type_eventum">Тип</string>
    <string name="descript_eventum">Описание</string>
    <string name="search">Добавить</string>
    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="users">Пользователи</string>
    <string name="add_edit_del_users">Добавить/Изменить/Удалить users</string>
    <string name="user_admin_1">Имя</string>
    <string name="user_admin_2">Фамилия</string>
    <string name="user_admin_3">Почта</string>
    <string name="user_admin_4">ДР</string>
    <string name="user_admin_5">Логин</string>
    <string name="user_admin_6">Пароль</string>
    <string name="user_admin_7">Роль</string>
    <string name="user_admin_8">Город</string>
    <string name="user_admin_9">О себе</string>
    <string name="ost_time">Осталось: </string>
    <string name="chgk">Что? Где? Когда?</string>
    <string name="q">q</string>
    <string name="user">Пользователь</string>
    <string name="time">Время</string>
    <string name="predupreg">Предупреждение</string>
    <string name="qwertty">К списку</string>
</resources>