<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:background="@color/panel_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/contacts"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:rotation="-90"
            android:background="@color/bok_panel"
            android:text="@string/contacts"
            android:textColor="@color/white"
            android:textSize="21dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tren"
            tools:ignore="SpUsage" />

        <TextView
            android:onClick="navigatorTren"
            android:id="@+id/tren"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/tren"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tutorial" />

        <TextView
            android:onClick="navigatorMainScen"
            android:id="@+id/main_scen"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/main_scen"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/tutorial"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" />

        <TextView
            android:id="@+id/tutorial"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:gravity="center"
            android:onClick="navigatorTutorial"
            android:rotation="-90"
            android:text="@string/info_teor"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:layout_constraintBottom_toTopOf="@+id/tren"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_scen" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="66dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/kino_logo"
            app:srcCompat="@mipmap/ic_logo_kino_foreground" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_opis1"
        android:layout_width="294dp"
        android:layout_height="147dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:text="@string/opis1"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/text_opis2"
        android:layout_width="303dp"
        android:layout_height="269dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_opis1">

        <TextView
            android:id="@+id/text_opis2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="35dp"
            android:text="@string/opis2"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/text_opis1" />

        <TextView
            android:id="@+id/text_opis2_2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="60dp"
            android:text="@string/opis2_2"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/text_opis1" />

    </LinearLayout>


    <TextView
        android:id="@+id/text_opis3"
        android:layout_width="300dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:text="@string/opis3"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_opis2" />

    <Button
        android:id="@+id/otzv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/panel_color"
        android:text="@string/opis_btn"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_opis3" />

</androidx.constraintlayout.widget.ConstraintLayout>