<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_main2"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:background="@color/panel_color_admin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/tutorial1"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="-5dp"

            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:onClick="navigatorMainAdmin"
            android:rotation="-90"

            android:text="@string/main_scen"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tutorial2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" />

        <TextView
            android:id="@+id/tutorial2"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginTop="92dp"
            android:background="@color/bok_panel_admin"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/lists_users"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tutorial1" />

        <TextView
            android:id="@+id/tutorial3"
            android:layout_width="119dp"
            android:layout_height="103dp"
            android:layout_marginTop="264dp"
            android:gravity="center"
            android:onClick="navigatorEventum"
            android:rotation="-90"
            android:text="@string/_user"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tutorial1" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="66dp"
            android:layout_height="80dp"
            android:background="@color/kino_logo_admin"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_logo_kino_foreground" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/main_scen_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/main_scen_1"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_scen_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/merienda_one"
        android:text="@string/main_scen_2"
        android:textColor="@color/panel_main_scene"
        android:textSize="46sp"
        app:layout_constraintStart_toEndOf="@+id/main_scen_1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/users"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/main_scen_1" />

    <ListView
        android:id="@+id/list_users"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/add_edit_del_users"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/list_users" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_name_user_admin"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:text="@string/user_admin_1"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/textView19"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_role_user_admin"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/user_admin_7"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/textView26"
        app:layout_constraintTop_toTopOf="@+id/text_date_user_admin" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_descript_user_admin"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/user_admin_9"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toEndOf="@+id/textView26"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_date_user_admin"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/user_admin_4"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@+id/textView23"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/text_email_user_admin" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_lastname_user_admin"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:text="@string/user_admin_2"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        tools:ignore="SmallSp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_email_user_admin"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:text="@string/user_admin_3"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@+id/textView22"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/text_name_user_admin" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_login_user_admin"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:text="@string/user_admin_5"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/text_lastname_user_admin" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_password_user_admin"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:text="@string/user_admin_6"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login_user_admin" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_city_user_admin"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:text="@string/user_admin_8"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_password_user_admin" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="70dp"
        android:text="@string/user_admin_1"
        app:layout_constraintEnd_toStartOf="@+id/textView19"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="120dp"
        android:text="@string/user_admin_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="30dp"
        android:text="@string/user_admin_3"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:text="@string/user_admin_4"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />


    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/user_admin_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:text="@string/user_admin_6"
        app:layout_constraintEnd_toStartOf="@+id/text_password_user_admin"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/user_admin_7"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/user_admin_8"
        app:layout_constraintEnd_toStartOf="@+id/text_city_user_admin"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toEndOf="@+id/text_role_user_admin"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/user_admin_9"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <Button
        android:id="@+id/btn_add_user"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:backgroundTint="@color/glavna_str_effect"
        android:fontFamily="sans-serif"
        android:text="@string/search"
        android:textColor="@color/white"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/text_descript_user_admin" />

    <Button
        android:id="@+id/btn_edit_user"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:backgroundTint="@color/glavna_str_effect"
        android:fontFamily="sans-serif"
        android:text="@string/edit"
        android:textColor="@color/white"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_del_user"
        app:layout_constraintStart_toEndOf="@+id/btn_add_user"
        app:layout_constraintTop_toBottomOf="@+id/text_descript_user_admin" />

    <Button
        android:id="@+id/btn_del_user"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:backgroundTint="@color/glavna_str_effect"
        android:fontFamily="sans-serif"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_descript_user_admin" />


</androidx.constraintlayout.widget.ConstraintLayout>