<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:background="@color/panel_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/contacts"
            android:layout_width="111dp"
            android:layout_height="200dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/contacts"
            android:textColor="@color/white"
            android:textSize="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tren"
            android:layout_width="121dp"
            android:layout_height="200dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/tren"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/main_scen"
            android:layout_width="111dp"
            android:layout_height="200dp"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/main_scen"
            android:textColor="@color/white"
            android:textSize="22dp"
            app:layout_constraintBottom_toTopOf="@+id/tren"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/main_scen_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/main_scen_1"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_scen_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/merienda_one"
        android:text="@string/main_scen_2"
        android:textColor="@color/panel_main_scene"
        android:textSize="46sp"
        app:layout_constraintStart_toEndOf="@+id/main_scen_1"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>